--- a/fio/index.html
+++ b/fio/index.html
@@ -59,7 +59,7 @@
     	<h2 style="color:#8376E4;">A</h2>
 	</div>
 	<div class="row text-center">
-  </center>  <center><img src="fio.png" </center> alt="Selamat Ulang Tahun Fiorenza" width="300">
+  <center><img src="fio.png" alt="Selamat Ulang Tahun Fiorenza" width="300">
     <p>Fiorenza, Happy Birthday!</p>
 	</div>
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
